overlays/magi/monitoring/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: monitoring
spec:
  gatewayClassName: cilium
  infrastructure:
    labels:
      pool: private
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: grafana.vbalex.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: monitoring-gateway-tls
      allowedRoutes:
        namespaces:
          from: Same
